加入启动动画

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,10 @@ board_build.flash_size = 16MB
 board_build.partitions = partitions.csv
 board_build.filesystem = littlefs
 build_flags = -D ARDUINO_ESP32_S3_DEVKITC_V1
+	;-mfix-esp32-psram-cache-issue
+	-DARDUINO_USB_CDC_ON_BOOT=1
+	;-DARDUINO_USB_DFU_ON_BOOT=0
+	;-DARDUINO_USB_MSC_ON_BOOT=0
 	-D USE_PREDEFINED_CONFIG=1
 	-DCORE_DEBUG_LEVEL=0
 	-DBOARD_HAS_PSRAM
